--- a/smoke.vcxproj
+++ b/smoke.vcxproj
@@ -70,6 +70,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include=".gitignore">
+      <FileType>CppCode</FileType>
+    </None>
     <ClCompile Include="src\smoke.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
