--- a/smoke.vcxproj
+++ b/smoke.vcxproj
@@ -78,6 +78,9 @@
     <None Include="src\particle.geom" />
     <None Include="src\particle.vert" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\vec2.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
