--- a/smoke.vcxproj.filters
+++ b/smoke.vcxproj.filters
@@ -9,4 +9,7 @@
     <None Include="src\particle.geom" />
     <None Include="src\particle.vert" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\vec2.hpp" />
+  </ItemGroup>
 </Project>
