10K particles and physics simulation on CPU

--- a/smoke.vcxproj.filters
+++ b/smoke.vcxproj.filters
@@ -11,5 +11,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\vec2.hpp" />
+    <ClInclude Include="src\timer.hpp" />
   </ItemGroup>
 </Project>
