--- a/smoke.vcxproj
+++ b/smoke.vcxproj
@@ -79,6 +79,7 @@
     <None Include="src\particle.vert" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\gl.hpp" />
     <ClInclude Include="src\timer.hpp" />
     <ClInclude Include="src\vec2.hpp" />
   </ItemGroup>
