--- a/smoke.vcxproj.filters
+++ b/smoke.vcxproj.filters
@@ -12,5 +12,6 @@
   <ItemGroup>
     <ClInclude Include="src\vec2.hpp" />
     <ClInclude Include="src\timer.hpp" />
+    <ClInclude Include="src\gl.hpp" />
   </ItemGroup>
 </Project>
