work in progress

--- a/smoke.vcxproj.filters
+++ b/smoke.vcxproj.filters
@@ -13,5 +13,6 @@
     <ClInclude Include="src\vec2.hpp" />
     <ClInclude Include="src\timer.hpp" />
     <ClInclude Include="src\gl.hpp" />
+    <ClInclude Include="src\valarray.hpp" />
   </ItemGroup>
 </Project>
